--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
+    "material-ui": "^0.16.4",
     "mongoose": "^4.5.7",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
@@ -29,6 +30,7 @@
     "react-addons-css-transition-group": "^15.3.0",
     "react-addons-update": "^15.3.0",
     "react-dom": "^15.1.0",
+    "react-icons": "^2.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "react-timeago": "^3.1.2",
