--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.3.0",
     "react-addons-update": "^15.3.0",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.1.0",
     "react-icons": "^2.2.1",
     "react-redux": "^4.4.5",
